# akmon

./: .gitignore  AKMON.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  POLICY_SYSTEM_EXPLANATION.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/agef-verify/: Cargo.toml
crates/agef-verify/src/: main.rs
crates/agef-verify/tests/: verify_integration.rs
crates/akmon-bundle/: Cargo.toml
crates/akmon-bundle/src/: archive.rs  capture.rs  error.rs  events.rs  lib.rs  manifest.rs  objects.rs  report.rs  sentinel.rs  signing.rs  spki.rs  verify.rs
crates/akmon-cli/: Cargo.toml
crates/akmon-cli/src/: audit_cmd.rs  bundle_attest.rs  bundle_cmd.rs  bundle_keygen.rs  bundle_prove.rs  cli_forward.rs  cli_project.rs  config_cmd.rs  diff_cmd.rs  doctor_cmd.rs  evidence_cmd.rs  export_cmd.rs  import_cmd.rs  main.rs  otel_cmd.rs  policy_cmd.rs  scout_cmd.rs  session_index.rs  session_transcript.rs  signing.rs  slo_cmd.rs  spec_cmd.rs
crates/akmon-cli/tests/: bundle_attest_integration.rs  bundle_export_integration.rs  bundle_import_integration.rs  bundle_keygen_integration.rs  bundle_prove_openssl_integration.rs  bundle_sign_integration.rs  config_json_output.rs  diff_integration.rs  e2e_otel_to_openssl_integration.rs  inspect_integration.rs  operator_prove_openssl_integration.rs  otel_integration.rs  redact_integration.rs  replay_integration.rs  verify_integration.rs
crates/akmon-cli/tests/common/: mod.rs
crates/akmon-cli/tests/fixtures/: README.md  openai_v2_weather_legacy.otlp.json
crates/akmon-config/: Cargo.toml
crates/akmon-config/src/: lib.rs
crates/akmon-core/: Cargo.toml
crates/akmon-core/src/: audit.rs  context_import.rs  cost_estimate.rs  evidence.rs  lang_profile.rs  lang_profile_data.inc  lib.rs  mcp.rs  permission.rs  policy.rs  policy_profiles.rs  project.rs  reliability.rs  replay.rs  sandbox.rs  secret.rs  slo.rs  slo_trend.rs
crates/akmon-core/src/fsm/: config.rs  error.rs  event.rs  mod.rs  state.rs  transition.rs
crates/akmon-diff/: Cargo.toml
crates/akmon-diff/src/: comparison.rs  divergence.rs  engine.rs  error.rs  lib.rs  mode.rs  report.rs  resolve.rs
crates/akmon-diff/tests/: integration.rs
crates/akmon-index/: Cargo.toml
crates/akmon-index/src/: error.rs  indexer.rs  lib.rs  persist.rs  search.rs
crates/akmon-journal/: Cargo.toml
crates/akmon-journal/src/: error.rs  event.rs  hash.rs  journal_meta.rs  lib.rs  object_store.rs  prelude.rs  session_graph.rs
crates/akmon-journal/tests/: integration_smoke.rs
crates/akmon-models/: Cargo.toml
crates/akmon-models/src/: anthropic.rs  bedrock.rs  config.rs  error.rs  http_client.rs  journaling.rs  lib.rs  llm_connect.rs  max_tokens.rs  message.rs  ollama.rs  ollama_models.rs  openai_compat.rs  provider_error.rs  provider_resolution.rs  stream.rs  text.rs  tool_def.rs
crates/akmon-otel/: Cargo.toml
crates/akmon-otel/src/: canonical.rs  error.rs  lib.rs  objects.rs  otlp.rs  semconv.rs
crates/akmon-query/: Cargo.toml
crates/akmon-query/src/: akmon_md_gen.rs  context.rs  context_manager.rs  error.rs  journal.rs  lib.rs  microcompact.rs  session.rs  specs_and_handoff.rs  subagent_tool.rs  tool_reference.txt  tools_filter.rs
crates/akmon-query/tests/: integration_session.rs
crates/akmon-replay/: Cargo.toml
crates/akmon-replay/src/: divergence.rs  engine.rs  error.rs  lib.rs  mode.rs  provider.rs  report.rs  tool.rs
crates/akmon-replay/tests/: integration.rs
crates/akmon-tools/: Cargo.toml
crates/akmon-tools/src/: apply_patch.rs  ask_followup.rs  context.rs  diff_render.rs  edit.rs  file_change_set.rs  git.rs  journaling.rs  lib.rs  list_directory.rs  mcp_client.rs  memory_write.rs  output.rs  patch.rs  read_file.rs  read_spec.rs  schema_validate.rs  search.rs  semantic_search.rs  shell.rs  todo_write.rs  web_fetch.rs  write_file.rs  write_spec.rs
crates/akmon-tui/: Cargo.toml
crates/akmon-tui/src/: agent.rs  app.rs  command.rs  config.rs  cost_estimate.rs  layout.rs  lib.rs  linkify.rs  message.rs  model_picker.rs  overlay.rs  paths.rs  render.rs  runner.rs  session_persist.rs  slash.rs  slash_exec.rs  theme.rs  tui_project.rs  welcome.rs
crates/akmon-tui/src/render/: code.rs  dialog_overlay.rs  flatten.rs  header_bar.rs  input_hit.rs  mod.rs  status_bar.rs  viewport_paint.rs  wrap.rs
crates/akmon-tui/src/state/: agent_display.rs  composer.rs  config_overlay.rs  dialog.rs  input.rs  mod.rs  overlay_state.rs  provider_runtime.rs  session_telemetry.rs  spinner.rs  viewport.rs
docs/: .gitignore  MAINTAINERS.md  README.md  agent-session-audit-3.1a.md  architecture.md  book.toml  repositioning-audit.md
docs/planning/: AKMON_IMPROVEMENT_PLAN.md  AKMON_V2_DECISION_DOCUMENT.md  competitive-microsoft-agt.md  compliance-crosswalk.md  distribution-plan.md
docs/src/: SUMMARY.md  comparison.md  introduction.md  license.md  security.md
docs/src/concepts/: architecture.md  compliance.md  glossary.md  reviewer-flow.md  trust-model.md  verifying-evidence.md
docs/src/contributing/: architecture.md  changelog.md  providers.md  setup.md
docs/src/examples/: codebase-analysis.md  elixir-phoenix.md  python-cli.md  python-flask-fastapi.md  refactoring.md  rust-axum-api.md  typescript-nextjs.md
docs/src/features/: audit-log.md  cost.md  evidence.md  git.md  mcp.md  policy-profiles.md  reliability-slos.md  security.md  semantic-search.md
docs/src/getting-started/: configuration.md  installation.md  providers.md  quickstart.md
docs/src/languages/: go.md  other.md  python.md  rust.md  typescript.md
docs/src/project/: akmon-md.md  export.md  import.md  init.md
docs/src/providers/: anthropic.md  azure.md  bedrock.md  (+5 more)
docs/theme/: custom.css
landing/: index.html
packaging/homebrew/: README.md
scripts/docs/: check_cli_smoke.sh  check_json_snippets.py  check_markdown_links.py  check_version_markers.py  run_all.sh  test_fixtures.sh
(+50 files in other folders)
