[workspace]
resolver = "2"
members = [
    "crates/akmon-core",
    "crates/akmon-config",
    "crates/akmon-cli",
    "crates/akmon-models",
    "crates/akmon-tools",
    "crates/akmon-query",
    "crates/akmon-index",
    "crates/akmon-tui",
]

[workspace.dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[workspace.package]
version = "1.5.4"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/akmon-dev/akmon"
homepage = "https://github.com/akmon-dev/akmon"
description = "Local-first, trust-first Rust AI coding agent"
keywords = ["ai", "agent", "coding", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Akmon Contributors"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
