[workspace]
resolver = "2"
members = [
    "crates/akmon-core",
    "crates/akmon-config",
    "crates/akmon-cli",
    "crates/akmon-models",
    "crates/akmon-tools",
    "crates/akmon-query",
    "crates/akmon-index",
    "crates/akmon-tui",
    "crates/akmon-journal",
    "crates/akmon-bundle",
    "crates/akmon-replay",
    "crates/akmon-diff",
    "crates/agef-verify",
    "crates/akmon-otel",
]

[workspace.dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
postcard = { version = "1", features = ["alloc"] }
redb = "2"
sha2 = "0.10"
blake3 = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
hex = "0.4"
bytes = "1"
ciborium = "0.2"
tar = "0.4"
zstd = "0.13"

[workspace.package]
version = "2.2.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/radotsvetkov/akmon"
homepage = "https://radotsvetkov.github.io/akmon/"
description = "Local-first, trust-first Rust AI coding agent"
keywords = ["ai", "agent", "coding", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Akmon Contributors"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
