[package]
name = "agef-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Standalone AGEF bundle integrity verifier (no Akmon CLI dependency)."

[[bin]]
name = "agef-verify"
path = "src/main.rs"

[dependencies]
akmon-bundle = { path = "../akmon-bundle" }
clap = { version = "4", features = ["derive"] }
dunce = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
akmon-bundle = { path = "../akmon-bundle" }
akmon-journal = { path = "../akmon-journal" }
serde_json = "1"
tempfile = "3"
time.workspace = true
