[package]
name = "akmon-bundle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AGEF bundle primitives for Akmon: manifest, events framing, objects, and tar.zst container."

[dependencies]
akmon-journal = { path = "../akmon-journal" }
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true
hex.workspace = true
time.workspace = true
tar.workspace = true
zstd.workspace = true
uuid.workspace = true
# Ed25519 detached session signatures (AGEF v0.1.2, decision D-18 / S9). ring is
# already in the dependency tree via rustls, so this adds no new supply-chain surface.
ring = "0.17"

[dev-dependencies]
tempfile = "3"
