[package]
name = "akmon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "akmon"
path = "src/main.rs"

[features]
default = ["semantic-index"]
semantic-index = [
    "dep:akmon-index",
    "dep:fastembed",
    "akmon-index/semantic-index",
    "akmon-tools/semantic-index",
    "akmon-tui/semantic-index",
]

[dependencies]
akmon-config = { path = "../akmon-config" }
akmon-core = { path = "../akmon-core" }
akmon-index = { path = "../akmon-index", optional = true }
akmon-models = { path = "../akmon-models" }
akmon-query = { path = "../akmon-query" }
akmon-tools = { path = "../akmon-tools" }
akmon-tui = { path = "../akmon-tui" }
clap = { version = "4", features = ["derive", "env"] }
fastembed = { version = "5", default-features = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dunce = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
