[package]
name = "akmon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "akmon"
path = "src/main.rs"

[features]
default = ["semantic-index"]
semantic-index = [
    "dep:akmon-index",
    "dep:fastembed",
    "akmon-index/semantic-index",
    "akmon-tools/semantic-index",
    "akmon-tui/semantic-index",
]

[dependencies]
akmon-bundle = { path = "../akmon-bundle" }
akmon-config = { path = "../akmon-config" }
akmon-core = { path = "../akmon-core" }
akmon-diff = { path = "../akmon-diff" }
akmon-index = { path = "../akmon-index", optional = true }
akmon-journal = { path = "../akmon-journal" }
akmon-models = { path = "../akmon-models" }
akmon-query = { path = "../akmon-query" }
akmon-replay = { path = "../akmon-replay" }
akmon-tools = { path = "../akmon-tools" }
akmon-tui = { path = "../akmon-tui" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
futures-util = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
fastembed = { version = "5", default-features = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dunce = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22.1"
time.workspace = true

[dev-dependencies]
akmon-journal = { path = "../akmon-journal", features = ["test-utils"] }
async-trait = "0.1"
tempfile = "3"
