[package]
name = "akmon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal Akmon primitives: policy, sandbox, secrets, audit (unstable API)."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dunce = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
serde_json = "1"
static_assertions = "1"
tempfile = "3"
