[package]
name = "akmon-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Semantic repo indexing and embedding search for Akmon."

[features]
default = []
semantic-index = ["dep:fastembed"]

[dependencies]
akmon-core = { path = "../akmon-core" }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
# v5: ONNX `ort` + TLS for model download; optional so slim binaries skip the embedding stack.
fastembed = { version = "5", default-features = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dunce = "1"
ignore = { version = "0.4", default-features = false }

[dev-dependencies]
tempfile = "3"
