[package]
name = "akmon-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LLM provider trait and model backends (Ollama, …)."

[dependencies]
akmon-core = { path = "../akmon-core" }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
static_assertions = "1"
