[package]
name = "akmon-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LLM provider trait and model backends (Ollama, …)."

[dependencies]
akmon-core = { path = "../akmon-core" }
akmon-journal = { path = "../akmon-journal" }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
time.workspace = true
ciborium.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
urlencoding = "2.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
akmon-journal = { path = "../akmon-journal", features = ["test-utils"] }
mockito = "1"
static_assertions = "1"
time.workspace = true
uuid.workspace = true
