[package]
name = "akmon-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Akmon agent session: FSM, policy, model provider, and tools orchestration."

[dependencies]
akmon-core = { path = "../akmon-core" }
akmon-models = { path = "../akmon-models" }
akmon-tools = { path = "../akmon-tools" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
