[package]
name = "akmon-replay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Replay primitives for deterministic session playback in Akmon."

[dependencies]
akmon-core = { path = "../akmon-core" }
akmon-journal = { path = "../akmon-journal" }
akmon-models = { path = "../akmon-models" }
akmon-query = { path = "../akmon-query" }
akmon-tools = { path = "../akmon-tools" }
async-trait = "0.1"
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
ciborium.workspace = true
tracing.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
