[package]
name = "akmon-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Akmon tool trait and built-in tools (filesystem, …)."

[features]
default = []
semantic-index = ["dep:akmon-index", "dep:fastembed", "akmon-index/semantic-index"]

[dependencies]
akmon-core = { path = "../akmon-core" }
akmon-journal = { path = "../akmon-journal" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ciborium = "0.2"
dirs = "5"
sha2 = "0.10"
akmon-index = { path = "../akmon-index", optional = true }
fastembed = { version = "5", default-features = true, optional = true }
async-trait = "0.1"
bytes = "1"
diffy = "0.4.2"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
akmon-journal = { path = "../akmon-journal", features = ["test-utils"] }
tempfile = "3"
